// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders with color and variant 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1px;
  background-color: #ebebeb;
  color: #1f1f1f;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1px;
  background-color: #a3f0d4;
  color: #007a41;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 3`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1px;
  color: #fff;
  background-color: #123321;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 4`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #000;
  color: #fff;
  border-radius: 1px;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 5`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #007a41;
  color: #fff;
  border-radius: 1px;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 6`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1px;
  color: #fff;
  background-color: #123321;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 7`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1px;
  border: solid 1px #ebebeb;
  color: #1f1f1f;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 8`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1px;
  border: solid 1px #007a41;
  color: #007a41;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;

exports[`Tag renders with color and variant 9`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1px;
  color: #123321;
  border: solid 1px #123321;
  padding: 1px 8px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 22px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Hello World
  </span>
</div>
`;
